TM-11214 Fix overflow ui issues on device views

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -6,7 +6,7 @@
 
 .tds-angular-component-content
   .dialog-container
-    border: 1px solid #63a242
+    border: 2px solid #63a242
     padding: 0
   .prop
     padding: 5px
@@ -52,8 +52,8 @@
         border: 1px solid #ccc
         margin: 2px 0
         padding: 2px 4px
-    td.sizeScale .select
-      width: 112px
+    td.sizeScale
+      width: 110px
     td .select
       width: 120px
     td.sizeScale input
